--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.14",
+    "bootstrap": "^5.2.0",
+    "bootstrap-vue": "^2.22.0",
+    "core-js": "^3.6.5",
+    "socket.io": "^4.5.1",
+    "vue": "^2.7.8",
     "vue-router": "^3.5.1",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
